--- a/.gitignore
+++ b/.gitignore
@@ -256,6 +256,9 @@ cython_debug/
 ### VisualStudioCode ###
 .vscode/*
 .vscode
+.vscode/
+vscode/*
+vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
